--- a/src/components/code/code-c/pages/elem-cabout.html
+++ b/src/components/code/code-c/pages/elem-cabout.html
@@ -52,7 +52,7 @@
   <h3>online курсы</h3>
 
   <p><a href="https://teach-in.ru/">https://teach-in.ru/</a> Открытые видеолекции учебных курсов МГУ</p>
-  <p><a href="https://code-basics.com/ru/languages/clang">https://code-basics.com/ru/languages/clang</a> Курс Си</p>
+  <p><a href="https://code-basics.com/ru/languages/clang">https://code-basics.com/ru/languages/clang</a> Курс Си 8 уроков. Прошел 2024.11.14 чт</p>
   <hr>
   <p><a href="https://gb.ru/courses/197">https://gb.ru/courses/197</a> Основы языка C. Закладываем фундамент Ваших знаний</p>
   <hr>
