--- a/src/components/front/front-edu/pages/dsr2024cpp/lec1.html
+++ b/src/components/front/front-edu/pages/dsr2024cpp/lec1.html
@@ -12,8 +12,9 @@
   <p><a href="#plan">План работы</a></p>
   <p><a href="#types">Типы данных</a></p>
   <p><a href="#base">Основы C++</a></p>
-  <p><a href="#task1">Задача 1</a></p>
-  <p><a href="#task2">Задача 2</a></p>
+  <p><a href="#task1">Задача 1. Найти периметр треугольника заданного координатами своих вершин</a></p>
+  <p><a href="#task2">Задача 2. Найти сумму членов арифметической прогрессии</a></p>
+  <p><a href="#task3">Задача 3. Найти сумму членов геометрической прогрессии</a></p>
 </article>
 
 
@@ -76,6 +77,9 @@ int main()
   return 0;
 }
 </pre>
+
+  <p>Output</p>
+  <code>Hello, world!</code>
 </article>
 
 
@@ -87,15 +91,20 @@ int main()
   <p>Необходимо установить Visual Studio Community</p>
   <p>Фигурные скобки {} нужно использовать везде где есть логические блоки</p>
 
-  <h4>Объявление и инициализация переменных</h4>
+  <h4>Объявление переменной</h4>
+
+  <p>При объявлении переменной сначала пишут тип данных потом название переменной. При объявлении переменной компилятор выделяет область памяти, размером указанного типа данных, для значения переменной</p>
+  <code>int valInt;</code>
+
+  <h4>Инициализация переменной</h4>
+  <p>Можно сразу при объявлении инициализировать переменную значением по умолчанию. Для типа int это 0</p>
+  <code>int valInt{}; // 0</code>
+
+  <p>Можно инициализировать переменную значением</p>
 <pre>
-int main()
-{
-  int valInt;
-  int valInt2 = 5;
-  int valInt3(6);
-  int valInt4{12};
-}
+int valInt2 = 5;
+int valInt3(6);
+int valInt4{12};
 </pre>
 <p>Инициализация через {} безопасная, при неправильном значении проект даже не запустится</p>
 
@@ -115,22 +124,48 @@ int main()
 </pre>
 
   <h4>Подключение русской локализации</h4>
+  <p>Если файл не в кодировке UTF-8, то можно подключить русскую локализацию</p>
   <code>setlocale(LC_ALL, "Russian");</code>
+
+  <p>Если файл в кодировке UTF-8, то также используют функцию <strong>setlocale()</strong>. В UTF-8 для каждого символа отводится не 1 байт, а 2 или 4 байта. Поэтому нужно использовать другой формат вывода. Вместо объекта <strong>cout</strong> применяется объект <strong>wcout</strong>, который работает с символами Unicode. А перед строкой надо указать символ <strong>L</strong></p>
+<pre>
+#include &lt;iostream&gt;
+int main() {
+  setlocale(LC_ALL, "");
+  std::wcout &lt;&lt; L"Привет, мир!";
+  return 0;
+}
+</pre>
+
+  <p>Output</p>
+  <code>Привет, мир!</code>
 
   <h4>Количество байт, выделенные под переменные</h4>
   <code>sizeof(bool)</code>
   <code>sizeof(int)</code>
   <code>sizeof(double)</code>
 
-  <p>Использование namespase std нежелательно</p>
-  <code>namespace std;</code>
+  <h4>Использование namespase std нежелательно</h4>
+  <code>namespace std; // нежелательно, потому что могут совпадать имена</code>
+
+  <h4>Возведение в квадрат</h4>
+  <code>a * a; // хорошо</code>
+  <code>pow(a, 2); хуже, потому что выделяется лишняя память</code>
+
+  <h4>Приостановить действие программы</h4>
+  <code>system("pause");</code>
+
+  <h4>Очистить поток ввода</h4>
+  <code>std::cin.clear();</code>
+  <code>std::cin.ignore(32767,n);</code>
+  <code>std::cin.get</code>
 </article>
 
 
-<!-- Задача 1 -->
+<!-- Задача 1. Найти периметр треугольника заданного координатами своих вершин -->
 <article class="article">
   <div class="anchor" id="task1"></div>
-  <h3>Задача 1</h3>
+  <h3>Задача 1. Найти периметр треугольника заданного координатами своих вершин</h3>
 
   <p>Треугольник задан на плоскости координатами своих вершин. Найти его периметр</p>
 <pre>
@@ -140,11 +175,11 @@ int main()
 {
   double x1, x2, x3, y1, y2, y3, a, b, c, p;
 
-  std::cout &lt;&lt; "Введите первую вершину" &lt;&lt; std::endl;
+  std::cout &lt;&lt; "Введите первую вершину x1 y1" &lt;&lt; std::endl;
   std::cin &gt;&gt; x1 &gt;&gt; y1;
-  std::cout &lt;&lt; "Введите вторую вершину" &lt;&lt; std::endl;
+  std::cout &lt;&lt; "Введите вторую вершину x2 y2" &lt;&lt; std::endl;
   std::cin &gt;&gt; x2 &gt;&gt; y2;
-  std::cout &lt;&lt; "Введите третью вершину" &lt;&lt; std::endl;
+  std::cout &lt;&lt; "Введите третью вершину x3 y3" &lt;&lt; std::endl;
   std::cin &gt;&gt; x3 &gt;&gt; y3;
 
   a = sqrt((x2-x1)*(x2-x1) + (y2-y1)*(y2-y1));
@@ -156,27 +191,68 @@ int main()
   return 0;
 }
 </pre>
-
-  <p>Возведение в квадрат</p>
-  <code>a * a; // хорошо</code>
-  <code>pow(a, 2); хуже, потому что выделяется лишняя память</code>
 </article>
 
 
-<!-- Задача 2 -->
+<!-- Задача 2. Найти сумму членов арифметической прогрессии -->
 <article class="article">
   <div class="anchor" id="task2"></div>
-  <h3>Задача 2</h3>
+  <h3>Задача 2. Найти сумму членов арифметической прогрессии</h3>
 
-  <p>Найти сумму членов арифметической и геометрической прогрессии</p>
+  <p>Дана арифметическая прогрессия</p>
+  <code>10 20 30 40 50</code>
+  <p>Первый член 10, шаг 10, количество членов 5</p>
+  <p>Найти сумму членов арифметической прогрессии Sa</p>
+
 <pre>
-double a1, d, Sa, na, b1, q, Sb, nb;
+#include &lt;iostream&gt;
 
-Sa = (2*a1+d*(na-1))/2*na;
-Sb = b1*(1-pow(q,n,b))/(1-q);
+int main()
+{
+  double a1, d, na, Sa;
+  a1 = 10;
+  d = 10;
+  na = 5;
+
+  Sa = (2*a1+d*(na-1))/2*na;
+
+  std::cout &lt;&lt; Sa;
+}
 </pre>
-  <code>system("pouse");</code>
-  <code>std::cin.clear();</code>
-  <code>std::cin.ignore(32767,n);</code>
-  <code>std::cin.get</code>
+
+  <p>Output</p>
+  <code>150</code>
 </article>
+
+
+<!-- Задача 3. Найти сумму членов геометрической прогрессии -->
+<article class="article">
+  <div class="anchor" id="task3"></div>
+  <h3>Задача 3. Найти сумму членов геометрической прогрессии</h3>
+
+  <p>Дана геометрическая прогрессия</p>
+  <code>10 20 40 80 160</code>
+  <p>Первый член 10, множитель 2, количество членов 5</p>
+  <p>Найти сумму членов геометрической прогрессии Sb</p>
+
+<pre>
+#include &lt;iostream&gt;
+#include &lt;math.h&gt;
+
+int main()
+{
+  double b1, q, nb, Sb;
+  b1 = 10;
+  q = 2;
+  nb = 5;
+
+  Sb = b1*(1-pow(q,nb))/(1-q);
+
+  std::cout &lt;&lt; Sb;
+}
+</pre>
+
+<p>Output</p>
+<code>310</code>
+</article>
+
