--- a/src/components/front/front-edu/pages/elem-edu-dsr2024cpp.html
+++ b/src/components/front/front-edu/pages/elem-edu-dsr2024cpp.html
@@ -29,5 +29,7 @@
   <p><a href="dsr2024cpp/lec-4.html" class="js-dsr-lecture">Лекция 4 (14.10.2024)</a></p>
   <p><a href="dsr2024cpp/lec-5.html" class="js-dsr-lecture">Лекция 5 (21.10.2024)</a></p>
   <p><a href="dsr2024cpp/lec-6.html" class="js-dsr-lecture">Лекция 6 (5.11.2024)</a></p>
+  <p><a href="dsr2024cpp/lec-7.html" class="js-dsr-lecture">Лекция 7 (11.11.2024)</a></p>
+  <p><a href="dsr2024cpp/lec-8.html" class="js-dsr-lecture">Лекция 8 (18.11.2024)</a></p>
 </article>
 
